--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^1.4.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "easygraphql-format-error": "0.0.3",
     "express": "^4.16.4",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.1.1",
