--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-jwt": "^5.3.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.1.1",
-    "jsonwebtoken": "^8.1.1"
+    "jsonwebtoken": "^8.1.1",
+    "nodemailer": "^5.1.1"
   },
   "devDependencies": {
     "lodash": "^4.17.11",
