--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "graphql": "^0.13.2",
     "graphql-tools": "^3.1.1",
     "jsonwebtoken": "^8.1.1",
-    "nodemailer": "^5.1.1"
-  },
-  "devDependencies": {
+    "nodemailer": "^5.1.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.1.0",
     "nodemon": "1.17.1"
